# schedust

./: Cargo.toml  README.md  results.yaml  task.json  task.yaml
src/: example files.rs  lib.rs  main.py  main.rs  process.rs  scheduler.rs  server.rs  task  task.rs  terminal.rs
src/server/: main.rs  scheduler.rs  terminal.rs  webserver.rs
src/shared/: job.rs  mod.rs  process.rs  sheet.rs  task.rs
src/shared/tasks/: delay.rs  email.rs  mod.rs  parrallel.rs  print.rs  script.rs  sequential.rs
src/tasks/: delay.rs  email.rs  mod.rs  parrallel.rs  print.rs  script.rs  sequential.rs
