[package]
name = "schedust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clokwerk = "0.3.5"
job_scheduler = "1.2.1"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.173", features = ["derive", "rc", "alloc", "std"] }
serde_json = "1.0.102"
serde_yaml = "0.9.24"
# tokio-serde = "0.8.0"

warp = "0.3.5"

# # ctrlc = "3.2.1"
# # once_cell = "1.10.0"
# # rocket = "0.5.0-rc.1"
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
