[package]
name = "schedust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
# clokwerk = "0.3.5"
job_scheduler = "1.2.1"
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive", "rc", "alloc", "std"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
# tokio-serde = "0.8.0"

warp = "0.3.5"

# # ctrlc = "3.2.1"
# # once_cell = "1.10.0"
# # rocket = "0.5.0-rc.1"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
